<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="32dp"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="24dp"
    app:cardElevation="6dp"
    android:elevation="6dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_answer_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_correct"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_answer_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textSize="14sp"
            android:layout_marginHorizontal="68dp"
            android:layout_gravity="center"
            android:layout_margin="52dp"
            android:textAlignment="center"
            android:text="@string/answer_correct"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/btn_quit"
                android:layout_width="112dp"
                android:layout_height="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="24dp"
                android:background="@drawable/button_light">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/green_dark"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/keluar"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/btn_restart"
                android:layout_width="112dp"
                android:layout_height="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_dark">

                <TextView
                    android:id="@+id/tv_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/ulangi"/>

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>