<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_app_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <FrameLayout
            android:id="@+id/btn_material"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="48dp"
            android:background="@drawable/button_transparent_white_stroke"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/materi_tajwid"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/btn_quiz"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/button_transparent_white_stroke"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/latihan"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/button_transparent_white_stroke"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/pencarian"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>