<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DetailMaterialActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/green_dark">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginStart="32dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/detail_materi"
            android:textColor="@color/white"
            android:layout_marginStart="24dp"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_semibold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="12dp">

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:srcCompat="@drawable/ic_app"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="20sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="32dp"
            android:layout_gravity="center"
            android:text="@string/materi"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="32dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:text="@string/long_lorem"/>

</LinearLayout>